# MarketPlaceProductSellerService

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/v1/: deps.py  routers.py
app/api/v1/endpoints/: product.py  seller.py
app/api/v1/graphql/: __init__.py  context.py  schema.py
app/api/v1/graphql/queries/: __init__.py  base.py  product.py  seller.py
app/api/v1/graphql/types/: __init__.py  base.py  product.py  seller.py
app/core/: config.py  container.py
app/db/: __init__.py
app/db/models/: __init__.py  base_mixins.py  product.py  seller.py
app/repositories/: __init__.py  base.py  product.py  seller.py
app/schemas/: product.py  seller.py
app/services/: __init__.py  product.py  seller.py
app/utils/: chars.py  extensions.py  http.py  orm.py
migrations/: env.py
migrations/versions/: 7ec7229c51df_initial.py
